# nhm-agent

./: .gitignore  .pre-commit-config.yaml  README.md  langgraph.json  pyproject.toml
docs/: README.en.md  README.ja.md  README.zh-TW.md  README.zh.md
src/: main.py
src/mercedes/: app.py  conf.py  settings.py
src/mercedes/agents/: graph.py  react.py
src/mercedes/agents/plan/: __init__.py  context.py  graph.py  prompts.py  state.py
src/mercedes/agents/plan/graph/: __init__.py  joiner.py  planner.py  task_fetching_unit.py
src/mercedes/agents/react/: __init__.py  context.py  graph.py  prompts.py  state.py
src/mercedes/agents/reflection/: __init__.py  context.py  graph.py  prompts.py  state.py
src/mercedes/api/endpoints/: chat.py
src/mercedes/core/: agent.py  embeddings.py  llm.py  rag.py  registry.py
src/mercedes/tests/: test_api.py
src/mercedes/tools/: __init__.py  basic.py  mcp.py  rag.py
src/mercedes/utils/: aimessage.py  conf.py  log.py
tests/: test_api.py
